Fix WorkSessionService bug for ongoing breaks and total hours calculation